--- a/apps/ledger-live-mobile/src/locales/de/common.json
+++ b/apps/ledger-live-mobile/src/locales/de/common.json
@@ -87,7 +87,8 @@
     "popular" : "beliebt",
     "getSupport" : "Hilfe",
     "comingSoon" : "In Kürze verfügbar",
-    "restart" : "Neustarten"
+    "restart" : "Neustarten",
+    "loadMore" : "Mehr laden"
   },
   "errors" : {
     "countervaluesUnavailable" : {
@@ -549,7 +550,7 @@
       "description" : "Transaktionen müssen innerhalb von 30 Sekunden signiert werden. Bitte versuchen Sie es erneut."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "Energie ist niedriger als notwendig. Es können bis zu 50TRX an Gebühren anfallen."
+      "title" : "Energie ist niedriger als notwendig. Es können bis zu 50 TRX an Gebühren anfallen."
     },
     "UpdateYourApp" : {
       "title" : "App-Update erforderlich",
@@ -811,6 +812,13 @@
       "title" : "Ihr Gerät ist gesperrt",
       "description" : "Entsperren Sie Ihr Gerät und versuchen Sie es erneut.",
       "descriptionWithProductName" : "Entsperren Sie Ihr {{ productName }} und versuchen Sie es erneut."
+    },
+    "EtherscanAPIError" : {
+      "title" : "Abruf der Transaktionen fehlgeschlagen",
+      "description" : "Bei den Explorern ist ein unerwarteter Fehler aufgetreten. Versuchen Sie es bitte später noch einmal"
+    },
+    "GasEstimationError" : {
+      "title" : "Gasgebührenschätzung fehlgeschlagen"
     }
   },
   "crash" : {
@@ -1118,6 +1126,10 @@
         "title" : "Lernen",
         "desc" : "Lernen Sie über Krypto, Web 3.0, digitale Sicherheit und mehr"
       },
+      "news" : {
+        "title" : "Neuigkeiten",
+        "desc" : "Erfahren Sie mehr über Krypto, Sicherheit, Web3 und die aktuellsten News"
+      },
       "ledgerApps" : {
         "title" : "Apps",
         "desc" : "Entdecken Sie Ledgers Partnerapplikationen an einem Ort"
@@ -1267,8 +1279,13 @@
       },
       "recovery" : "Haben Sie bereits eine Wiederherstellungsphrase?",
       "protect" : {
-        "label" : "~60 Minuten",
-        "subTitle" : "Mit Protect wiederherstellen"
+        "subTitle" : "Wiederherstellen mit Ledger Recover",
+        "drawer" : {
+          "title" : "Use Ledger Nano X",
+          "desc" : "Ledger Recover ist ausschließlich für Ledger Nano X erhältlich.",
+          "buyNanoX" : "Kaufen Sie eine Ledger Nano X",
+          "discoverBenefits" : "Entdecken Sie die Vorteile"
+        }
       }
     },
     "stepNewDevice" : {
@@ -1495,25 +1512,20 @@
     "stepProtect" : {
       "bullets" : {
         "0" : {
-          "title" : "Durchsuchen ",
-          "label" : "Erfahren Sie, wie Sie Ihr Gerät bedienen können, indem Sie die Anweisungen auf dem Bildschirm lesen."
+          "title" : "Wählen Sie „Restore“ (Wiederherstellen)",
+          "label" : "Drücken Sie beide Tasten gleichzeitig, um auszuwählen."
         },
         "1" : {
-          "title" : "Wählen Sie „Restore“ (Wiederherstellen)",
-          "label" : "Drücken Sie beide Tasten gleichzeitig, um die Auswahl zu bestätigen."
-        },
-        "2" : {
-          "title" : "Wählen Sie den Modus „Restore with Protect“ (mit Protect wiederherstellen) aus.",
-          "label" : "Drücken Sie beide Tasten gleichzeitig, um die Auswahl zu bestätigen."
+          "title" : "Wählen Sie „Restore using Ledger Recover“ (Mit Ledger Recover wiederherstellen)",
+          "label" : "Drücken Sie beide Tasten gleichzeitig, um auszuwählen."
         }
       },
       "nextStep" : "Weiter",
       "extraInfo" : {
-        "tooltip" : "Ich kann es nicht auf meinem Ledger finden",
-        "title" : "Warum kann ich „Restore with Protect“ (mit Protect wiederherstellen) nicht auf meinem Ledger finden?",
-        "desc1" : "Am wahrscheinlichsten ist es, dass Ihr Gerät nicht mit Protect kompatibel ist. Keine Sorge, wir sind hier, um Ihnen zu helfen, wie es funktioniert.",
-        "desc2" : "Bitte kontaktieren Sie uns und wählen Sie „My Ledger doesn't display Restore with Protect“ (Mein Ledger zeigt die Wiederherstellung mit Protect nicht an), wir kümmern uns um Sie.",
-        "cta" : "Führen Sie die Schritte manuell durch",
+        "tooltip" : "Ich kann „Restore using Ledger Recover“ nicht sehen",
+        "title" : "Das Betriebssystem auf Ihrem Ledger Nano X muss aktualisiert werden",
+        "desc" : "Sie können versuchen, das Betriebssystem zu aktualisieren oder den Ledger Kundenservice um Hilfe bitten.",
+        "cta" : "Erfahren Sie, wie Sie aktualisieren können",
         "supportLink" : "Ledger-Kundenservice kontaktieren"
       }
     },
@@ -1653,6 +1665,11 @@
             "label" : "Prüfen Sie, ob Ihr Nano X erkannt wird."
           }
         }
+      },
+      "protectConnectionInformationModal" : {
+        "title" : "Ledger Nano X Verbindung",
+        "description" : "Stellen Sie sicher, dass sich Ihr Ledger in der Nähe Ihres Mobiltelefons befindet und versuchen Sie es noch einmal. <LinkBluethooth>Bluetooth® Verbindungsprobleme \n</LinkBluethooth>.\nWenn Bluetooth® funktioniert, müssen Sie möglicherweise das Betriebssystem von Ledger aktualisieren. Versuchen Sie, das Betriebssystem zu aktualisieren, oder wenden Sie sich an den Ledger Kundenservice, um Hilfe zu erhalten. ",
+        "learnHowToUpdate" : "Erfahren Sie, wie Sie aktualisieren können"
       }
     },
     "stepImportAccounts" : {
@@ -2495,7 +2512,9 @@
         "bullet2" : "Ledger Live-Version, OS-Region, Sprache und Region"
       },
       "hideEmptyTokenAccounts" : "Leere Token-Konten ausblenden",
-      "hideEmptyTokenAccountsDesc" : "Alle leeren Token-Konten auf der Werte-Seite werden ausgeblendet."
+      "hideEmptyTokenAccountsDesc" : "Alle leeren Token-Konten auf der Werte-Seite werden ausgeblendet.",
+      "filterTokenOperationsZeroAmount" : "Token-Transaktionen ausblenden, wenn der Wert 0 ist",
+      "filterTokenOperationsZeroAmountDesc" : "Das Ausblenden von Token-Transaktionen ohne Wert kann einige potenzielle Adresspoisoning-Angriffe auf Eth, Polygon, BSC, Tron... verhindern."
     },
     "currencies" : {
       "header" : "Währungen",
@@ -3298,6 +3317,10 @@
           }
         }
       }
+    },
+    "walletConnect" : {
+      "title" : "WalletConnect",
+      "description" : "Verbinden Sie Ihre Wallet mit dApps"
     }
   },
   "signMessage" : {
@@ -3419,6 +3442,15 @@
         "description" : "Der maximal ausgabefähige Betrag ist das gesamte Guthaben auf einem Konto, das zum Senden in einer Transaktion zur Verfügung steht."
       }
     }
+  },
+  "editTransaction" : {
+    "header" : "Transaktion bearbeiten",
+    "stuckTx" : "Ihre zuletzt „gesendete“ Transaktion ist stecken geblieben. Sie können die Transaktion mit einer höheren Netzwerkgebühr beschleunigen, oder sie abbrechen.",
+    "speedupTxMessage" : "Ihre Transaktion ist noch nicht abgeschlossen. Sie können sie mit einer höheren Netzwerkgebühr beschleunigen, oder sie abbrechen.",
+    "speedupOrCancel" : "Beschleunigen oder Abbrechen",
+    "resubmitTxDescription" : "Reichen Sie die Transaktion mit einer höheren Netzwerkgebühr erneut ein.",
+    "cancelTxDescription" : "Sendet 0 ETH an Ihre eigene Adresse. Um die Stornierung zu gewährleisten, ist die Netzwerkgebühr 10-30 % höher als die Gebühr für die zu stornierende Transaktion.",
+    "currentNetworkFee" : "Aktuelle Netzwerkgebühr = {{amount}} ETH"
   },
   "requestAccount" : {
     "stepperHeader" : {
@@ -6004,22 +6036,10 @@
       "status" : {
         "new" : {
           "title" : "Neu",
-          "desc" : "Ihre Wiederherstellungsphrase sichern",
-          "0" : {
-            "title" : "Millionen von Ledger-Nutzern vertrauen darauf"
-          },
-          "1" : {
-            "title" : "Ihre Wiederherstellungsphrase ist sicher mit Ihrer Identität verknüpft"
-          },
-          "2" : {
-            "title" : "Verschlüsselung auf dem neuesten Stand der Technik"
-          },
-          "3" : {
-            "title" : "In 3 dezentrale Teile aufgeteilt, sodass Ihre Wiederherstellungsphrase niemals gestohlen werden kann"
-          },
+          "desc" : "Stellen Sie den Zugang zu Ihrer Wallet ohne Ihre geheime Wiederherstellungsphrase wieder her.",
           "actions" : {
-            "learnMore" : "Weitere Informationen",
-            "alreadySubscribed" : "Haben Sie Protect bereits abonniert?"
+            "learnMore" : "Welchen Nutzen bringt es mir?",
+            "alreadySubscribed" : "Bereits abonniert? <LinkAccount>Mein Konto ansehen</LinkAccount>"
           }
         },
         "confirmIdentity" : {
@@ -6077,5 +6097,13 @@
         "emptyPassword" : "Passwort darf nicht leer sein"
       }
     }
+  },
+  "newsfeed" : {
+    "title" : "Newsfeed",
+    "poweredByCryptopanic" : "Powered by Cryptopanic",
+    "noPosts" : "Zur Zeit keine Posts verfügbar"
+  },
+  "deviceConnect" : {
+    "title" : "Gerät verbinden"
   }
 }
